# bindings-libssh2

./: bindings-libssh2.cabal
cbits/: cbits.c
src/Bindings/: Libssh2.chs
src/Network/: SSH.hs
src/Network/SSH/: Primitive.hs
test/: Tests.hs
