name:                bindings-libssh2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/libssh2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag agent
  description:         Support for libssh2 agent API
  default:             False

flag knownhost
  description:         Support for libssh2 knownhost API
  default:             False

flag publickey
  description:         Support for libssh2 publickey API
  default:             False

flag sftp
  description:         Support for libssh2 sftp API
  default:             False

library
  hs-source-dirs:      src
  c-sources:           cbits/cbits.c
  exposed-modules:     Network.SSH
                       Network.SSH.Primitive,
                       Bindings.Libssh2
                       
  build-depends:       base >= 4.7 && < 5,
                       unix,
                       network,
                       bytestring,
                       mtl,
                       tasty,
                       tasty-hspec
  default-language:    Haskell2010
  extra-libraries:     ssh2
  pkgconfig-depends:   libssh2 >= 1.2.8
  ghc-options:         -Wall
  build-tools:         c2hs >= 0.27

  if flag(agent)
     cpp-options:      -DHAVE_LIBSSH2_AGENT_API
  if flag(knownhost)
     cpp-options:      -DHAVE_LIBSSH2_KNOWNHOST_API
  if flag(publickey)
     cpp-options:      -DUSE_PUBLICKEY_SUBSYSTEM
  if flag(sftp)
     cpp-options:      -DUSE_SFTP_SUBSYSTEM

test-suite tests
  type: exitcode-stdio-1.0
  main-is:             Tests.hs
  -- other-modules:       
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5,
                       unix,
                       bindings-libssh2,
                       tasty,
                       tasty-hspec
